# 3-python-package-exercise-team0-3

./: Pipfile  README.md  base_prompt.md  demo.py  pyproject.toml
.github/workflows/: build.yaml
src/gptcoder/: __init__.py  __main__.py  demo.py  gptcoder.py
src/gptcoderpackage/: gptcoder.py
tests/: test_gptcoder.py
