[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptcoder"
description = "A package for generating code snippets using GPT-3.5-turbo, developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.0.7"
dependencies = ["openai"]
authors = [
  { name="Eugene Chang", email="ec4338@nyu.edu" },
  { name="Aarav Sawlani", email="as14324@nyu.edu"},
  { name="Joshua Forlenza", email="jf4229@nyu.edu" },
  { name="Nathanuel Dixon", email="nbd9400@nyu.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2024/3-python-package-exercise-team0-3"
"Repository" = "https://github.com/software-students-spring2024/3-python-package-exercise-team0-3.git"
"Bug Tracker" = "https://github.com/software-students-spring2024/3-python-package-exercise-team0-3/issues"
